--- a/crap/cssexterno.css
+++ b/crap/cssexterno.css
@@ -1,5 +1,9 @@
+body{
+background-image: url("http://subtlepatterns.com/patterns/retina_wood.png");
+background-repeat: repeat;
+}
 h3{
-margin: 50px 5px 0px 200px;
+margin: 70px 5px 0px 200px;
 }
 .dado 
 {
@@ -8,7 +12,6 @@ height: 100px;
 padding: 0px;
 position: absolute;
 }
-
 #mesa
 {
 border-radius: 15px;
@@ -20,7 +23,7 @@ position: relative;
 background-color: #008904;
 border: 15px groove #FFB003;
 }
-
+p{margin: -70px 0px 0px 200px;}
 #botao
 {
 float: right;
@@ -37,7 +40,6 @@ right: 0px;
 margin: 0px 0px 45px 50px;
 font-size: 30px;
 }
-
 #rolarDados
 {
 position: relative;
